--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
+  "name": "gan-yeled-teva-website",
+  "description": "A website for Gan Yeled Teva in Tel-Aviv, Israel",
   "version": "2.20.11",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Gan Yeled Teva",
   "dependencies": {
+    "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "gatsby": "^3.0.1",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-disqus": "^1.2.2",
@@ -28,6 +30,7 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.1.0",
+    "i": "^0.3.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.14.26",
@@ -40,6 +43,7 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "cli-glob": "^0.1.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -49,7 +53,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-postcss": "^4.3.0",
     "gh-pages": "^3.1.0",
+    "postcss": "^8.2.10",
     "prettier": "^2.2.1",
     "remark-cli": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
@@ -57,6 +63,8 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
+    "tailwindcss": "^2.1.1",
+    "tailwindcss-rtl": "^0.7.3",
     "write-good": "^1.0.8"
   },
   "keywords": [
