--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "i": "^0.3.6",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.14.26",
