--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
+    "@reach/router": "^1.3.4",
     "gatsby": "^3.0.1",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-disqus": "^1.2.2",
@@ -36,6 +37,7 @@
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.14.26",
     "prismjs": "^1.23.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
