--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "gatsby": "^3.0.1",
+    "gatsby-image": "^3.5.0",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-feed": "^3.0.0",
