--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: nir2002/ganyeledteva-gatsby # Path to your Github repository
   branch: main # Branch to update
-  # base_url: https://auth-cms.herokuapp.com
+  base_url: https://api.netlify.com
 media_folder: '/static/assets/pics/uploads' # Media files will be stored in the repo under static/images/uploads
 public_folder: 'assets/pics/uploads' # The src attribute for uploaded media will begin with /images/uploads
 # publish_mode: editorial_workflow
