--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-nprogress": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-remove-fingerprints": "0.0.2",
     "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-twitter": "^3.0.0",
