--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   base_url: https://api.netlify.com
   auth_endpoint: auth
 media_folder: 'static/assets/pics/uploads' # Media files will be stored in the repo under static/images/uploads
-public_folder: 'assets/pics/uploads' # The src attribute for uploaded media will begin with /images/uploads
+public_folder: '/assets/pics/uploads' # The src attribute for uploaded media will begin with /images/uploads
 # publish_mode: editorial_workflow
 collections:
   - name: 'weekly-update'
