facebook and contact buttons in nav bar

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "2.20.11",
   "author": "Gan Yeled Teva",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@mdx-js/mdx": "^1.6.22",
