--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
+    "@tailwindcss/forms": "^0.3.3",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.5.0",
     "gatsby-plugin-catch-links": "^3.0.0",
