--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.9.5",
     "rehype-react": "^6.2.0",
@@ -72,6 +73,7 @@
     "gh-pages": "^3.1.0",
     "postcss": "^8.2.10",
     "prettier": "^2.2.1",
+    "react-alice-carousel": "^2.5.1",
     "remark-cli": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
     "stylelint": "^13.11.0",
