new 'work-in-gan' collection

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -202,3 +202,15 @@ collections:
           widget: "file",
           required: false,
         }
+      - {
+          label: "כותרת סרטון",
+          name: "tadmitVideoTitle",
+          widget: "text",
+          required: false,
+        }
+      - {
+          label: "כותרת גלריית צוות",
+          name: "teamGalleryTitle",
+          widget: "text",
+          required: false,
+        }
