--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -194,7 +194,7 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "כותרת", name: "title", widget: "string" }
+      - { label: "כותרת דף", name: "title", widget: "string" }
       - { label: "תת כותרת", name: "subtitle", widget: "text", required: false }
       - {
           label: "סרטון תדמית",
@@ -214,3 +214,21 @@ collections:
           widget: "text",
           required: false,
         }
+  - name: "products"
+    label: "מוצרים חינוכיים"
+    folder: "content/products"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "כותרת דף", name: "title", widget: "string" }
+      - { label: "תת כותרת", name: "subtitle", widget: "text", required: false }
+      - { label: "טקסט", name: "body", widget: "markdown" }
+
+      - { label: "כותרת לסרטון הראשון", name: "video1_title", widget: "string" }
+      - { label: "סרטון 1", name: "video1", widget: "file", required: false }
+
+      - { label: "כותרת לסרטון הראשון", name: "video2_title", widget: "string" }
+      - { label: "סרטון 2", name: "video2", widget: "file", required: false }
+
+      - { label: "כותרת לסרטון הראשון", name: "video3_title", widget: "string" }
+      - { label: "סרטון 3", name: "video3", widget: "file", required: false }
