--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -228,11 +228,26 @@ collections:
       - { label: "תת כותרת", name: "subtitle", widget: "text", required: false }
       - { label: "טקסט", name: "body", widget: "markdown" }
 
-      - { label: "כותרת לסרטון הראשון", name: "video1_title", widget: "string" }
+      - {
+          label: "כותרת לסרטון הראשון",
+          name: "video1_title",
+          widget: "string",
+          required: false,
+        }
       - { label: "סרטון 1", name: "video1", widget: "file", required: false }
 
-      - { label: "כותרת לסרטון הראשון", name: "video2_title", widget: "string" }
+      - {
+          label: "כותרת לסרטון הראשון",
+          name: "video2_title",
+          widget: "string",
+          required: false,
+        }
       - { label: "סרטון 2", name: "video2", widget: "file", required: false }
 
-      - { label: "כותרת לסרטון הראשון", name: "video3_title", widget: "string" }
+      - {
+          label: "כותרת לסרטון הראשון",
+          name: "video3_title",
+          widget: "string",
+          required: false,
+        }
       - { label: "סרטון 3", name: "video3", widget: "file", required: false }
