--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -237,7 +237,7 @@ collections:
       - { label: "סרטון 1", name: "video1", widget: "file", required: false }
 
       - {
-          label: "כותרת לסרטון הראשון",
+          label: "כותרת לסרטון השלישי",
           name: "video2_title",
           widget: "string",
           required: false,
@@ -245,7 +245,7 @@ collections:
       - { label: "סרטון 2", name: "video2", widget: "file", required: false }
 
       - {
-          label: "כותרת לסרטון הראשון",
+          label: "כותרת לסרטון השני",
           name: "video3_title",
           widget: "string",
           required: false,
