צןמםר כןס ןמ בצד בםמכןע

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -229,4 +229,4 @@ collections:
               widget: "string",
               required: false,
             }
-          - { label: "סרטון", name: "video", widget: "file", required: false }
+          - { label: "סרטון", name: "video", widget: "file" }
