added section names to faq in cms

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -195,6 +195,8 @@ collections:
           fields:
             - { label: "שאלה", name: "question", widget: "string" }
             - { label: "תשובה", name: "answer", widget: "markdown" }
+      - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
+      
 
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
