--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -189,11 +189,11 @@ collections:
       widget: list
       fields:
         - { label: "כותרת נושא", name: "faq_section_title", widget: "string" }
-        - name: faqs
-          label: שאלות ותשובות
-          widget: list
-          fields:
-          - { label: "שאלה", name: "question", widget: "string" }
+        # - name: faqs
+        #   label: שאלות ותשובות
+        #   widget: list
+        #   fields:
+        #   - { label: "שאלה", name: "question", widget: "string" }
           - { label: "תשובה", name: "answer", widget: "markdown" }
       - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
       
