--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -194,7 +194,7 @@ collections:
         #   widget: list
         #   fields:
         #   - { label: "שאלה", name: "question", widget: "string" }
-          - { label: "תשובה", name: "answer", widget: "markdown" }
+          # - { label: "תשובה", name: "answer", widget: "markdown" }
       - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
       
 
