--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -190,12 +190,12 @@ collections:
         fields:
           - { label: "שאלה", name: "question", widget: "string" }
           - { label: "תשובה", name: "answer", widget: "markdown" }
-    # - name: faq_sections
-    #   label: נושאים לשאלות ותשובות
-    #   widget: list
-    #   fields:
-    #     - { label: "כותרת נושא", name: "faq_section_title", widget: "string" }
-    #   - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
+      # - name: faq_sections
+      #   label: נושאים לשאלות ותשובות
+      #   widget: list
+      #   fields:
+      #     - { label: "כותרת נושא", name: "faq_section_title", widget: "string" }
+      - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
 
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
