revert to 4de23a4 commit

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,12 +21,11 @@ collections:
       - { label: "טקסט", name: "body", widget: "markdown", required: false }
 
   - name: "home"
-    label: "דף הבית"
+    label: "דף הבית - אנחנו בתקשורת"
     folder: "content/home"
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "כותרת", name: "title", widget: "string" }
       - {
           label: "כותרת לסרטון תסדמית",
           name: "tadmit_video_title",
@@ -184,34 +183,12 @@ collections:
     fields:
       - { label: "כותרת", name: "title", widget: "string" }
       - { label: "תת כותרת", name: "subtitle", widget: "text" }
-      - name: "faq_sections"
-      label: "נושאים לשאלות ותשובות"
-      widget: list
-      fields:
-        - { label: "כותרת נושא", name: "faq_section_title", widget: "string" }
-
-
-  # - name: "faq"
-  #   label: "שאלות ותשובות"
-  #   folder: "content/faq"
-  #   create: true
-  #   slug: "{{slug}}"
-  #   fields:
-  #     - { label: "כותרת", name: "title", widget: "string" }
-  #     - { label: "תת כותרת", name: "subtitle", widget: "text" }
-  #     - name: "faq_sections"
-  #     label: "נושאים לשאלות ותשובות"
-  #     widget: list
-  #     fields:
-  #         - { label: "כותרת נושא", name: "faq_section_title", widget: "string" }
-  #         - name: faqs
-  #         label: "שאלות ותשובות"
-  #         widget: list
-  #         fields:
-  #           - { label: "שאלה", name: "question", widget: "string" }
-  #           - { label: "תשובה", name: "answer", widget: "markdown" }
-  #     - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
-
+      - name: faqs
+        label: שאלות ותשובות
+        widget: list
+        fields:
+          - { label: "שאלה", name: "question", widget: "string" }
+          - { label: "תשובה", name: "answer", widget: "markdown" }
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
     folder: "content/work-in-gan"
