--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -193,9 +193,9 @@ collections:
         - name: faqs
           label: שאלות ותשובות
           widget: list
-          fields:
+          field:
             - { label: "שאלה", name: "question", widget: "string" }
-            - { label: "תשובה", name: "answer", widget: "markdown" }
+            # - { label: "תשובה", name: "answer", widget: "markdown" }
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
     folder: "content/work-in-gan"
