--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -190,6 +190,13 @@ collections:
         fields:
           - { label: "שאלה", name: "question", widget: "string" }
           - { label: "תשובה", name: "answer", widget: "markdown" }
+          - name: list
+          label: list
+          widget: list
+          fields:
+            - { label: "שאלה", name: "question", widget: "string" }
+
+
 
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
