--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -184,8 +184,8 @@ collections:
       - { label: "כותרת", name: "title", widget: "string" }
       - { label: "תת כותרת", name: "subtitle", widget: "text" }
       - { label: "טקסט צור קשר", name: "contact_text", widget: "markdown" }
-      - name: faqs
-        label: שאלות ותשובות
+      - name: faqs_sections
+        label: נושאים לשאלות ותשובות
         widget: list
         fields:
           - { label: "שאלה", name: "question", widget: "string" }
@@ -195,7 +195,7 @@ collections:
             widget: list
             fields:
               - { label: "שאלה", name: "question", widget: "string" }
-              - { label: "שאלה", name: "question", widget: "string" }
+              - { label: "כגכג", name: "quesfgfgtion", widget: "string" }
 
   - name: "work-in-gan"
     label: "לעבוד בגן ילדי הטבע"
