--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-multi-carousel": "^2.6.3",
     "react-responsive-carousel": "^3.2.18",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.9.5",
