--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.14.26",
     "prismjs": "^1.23.0",
+    "pure-react-carousel": "^1.27.6",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
