--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,15 +28,9 @@ collections:
     slug: "{{slug}}"
     fields:
       - {
-          label: "כותרת לסרטון תדמית",
-          name: "tadmit_video_title",
-          widget: "string",
-          required: false,
-        }
-      - {
-          label: "סרטון תדמית",
-          name: "tadmit_video",
-          widget: "file",
+          label: "סרטון תדמית - סיומת סרטון בקישור יוטיוב ",
+          name: "tadmit_video_youtube_url_code",
+          widget: "text",
           required: false,
         }
       - name: us_on_media
@@ -231,7 +225,7 @@ collections:
       - {
           label: "סרטון תדמית",
           name: "tadmitVideo",
-          widget: "file",
+          widget: "text",
           required: false,
         }
       - {
