videos in gan scetions now a youtube full link address

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -141,9 +141,15 @@ collections:
           required: false,
         }
       - {
-          label: "סיומת כתובת סרטון ביוטיוב - לדוגמא: הסיומת לסרטון הנל www.youtube.com/watch?v=2IiNEMEFF0o היא 2IiNEMEFF0o ",
-          name: "video",
+          label: "לינק לסרטון יוטיוב",
+          name: "youtubeVideoUrl",
           widget: "string",
+          required: false,
+        }
+      - {
+          label: "קובץ תפריט תזונה",
+          name: "foodMenu",
+          widget: "file",
           required: false,
         }
 
