--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-lodash": "^4.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^5.0.0",
     "gatsby-plugin-nprogress": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
